# sol-mesh

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src/lib/: useLog.ts
client/: package.json
client/examples/: common.ts  consumer-cli.ts  demo.ts  provider-cli.ts
client/src/: index.ts  relay.ts  sdk.ts  state.ts
crates/solmesh-state/: Cargo.toml
crates/solmesh-state/src/: lib.rs
programs/solmesh/: Cargo.toml
programs/solmesh/src/: constants.rs  errors.rs  lib.rs
programs/solmesh/src/cpi/: core.rs
programs/solmesh/src/crypto/: ed25519.rs
programs/solmesh/src/instructions/: admin.rs  dispute.rs  initialize_config.rs  lifecycle.rs  mod.rs  open_session.rs  register_node.rs  settle.rs  shared.rs  spl.rs  token.rs
programs/solmesh/src/state/: mod.rs
scripts/: setup.sh
tests/: 01_config.ts  02_register_node.ts  03_open_session.ts  04_state_channel.ts  05_settle_happy.ts  06_checkpoint.ts  07_unilateral_challenge.ts  08_expire_cancel.ts  09_security.ts  10_spl_escrow.ts  11_spl_dispute.ts  README.md  helpers.ts
