[package]
name = "solmesh-state"
version = "0.1.0"
edition = "2021"
description = "Shared canonical StateUpdate message for SolMesh (program + client)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.10.4"
borsh-derive = "0.10.4"

[features]
default = []
idl-build = ["dep:anchor-lang", "anchor-lang/idl-build"]

[dependencies.anchor-lang]
version = "0.32"
optional = true
