[package]
name = "solmesh"
version = "0.1.0"
description = "SolMesh — DePIN state settler with off-chain state channels + on-chain ed25519 settlement."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmesh"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solmesh-state = { path = "../../crates/solmesh-state" }
# Pin mpl-core to the version matching the Core program deployed on your cluster.
mpl-core = { version = "0.8.0", features = ["anchor"] }
