[package]
name = "solmesh"
version = "0.1.0"
description = "SolMesh — DePIN state settler with off-chain state channels + on-chain ed25519 settlement."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmesh"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "solmesh-state/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solmesh-state = { path = "../../crates/solmesh-state" }
mpl-core = { version = "0.12.1", default-features = false, features = ["anchor"] }
getrandom = { version = "0.2", features = ["custom"] }
